tests/negative/runtime/format_too_many_args/input.ci
void main() {
    print(format("{}", ["a", "b"]) + "\n");
}
